[package]
name = "pfc-mint2reserve"
version = "0.1.0"
edition = "2018"
authors=["pfc-validator <pfc-validator@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terra-rust-api =  "1.0.8"
terra-rust-wallet = "1.0"
anyhow="1.0.44"
tokio = { version = "1.13", features = ["full"] }
structopt = "0.3"
env_logger = "0.8.3"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv="0.15.0"
secp256k1 = { version = "0.20.3", default-features = false }
serde_json = "1.0"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"
reqwest = { version ="0.11", features=["json"], default-features = false }
thiserror = "1.0.30"